Faculty section cards spacing fixed.

--- a/src/css/staff.css
+++ b/src/css/staff.css
@@ -15,6 +15,11 @@
   margin-right: auto;
 }
 
+.card-deck {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /* main body alignment for all pages */
 .main-body {
   margin-left: 10%;
